--- a/style.css
+++ b/style.css
@@ -1346,8 +1346,8 @@ nav ul li a.nav-link:active { /* Keeps the click state */
     }
 
     .fab-btn {
-        width: 50px;
-        height: 50px;
+        width: 50px !important;
+        height: 50px !important;
         font-size: 20px;
     }
 
@@ -1369,8 +1369,8 @@ nav ul li a.nav-link:active { /* Keeps the click state */
 
     /* Optional: Resize Back to Top to match */
     #backToTop {
-        width: 50px;
-        height: 50px;
+        width: 50px !important;
+        height: 50px !important;
         right: 20px !important;
         bottom: 85px;
         font-size: 18px;
